<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.User.EditBioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            app:theme="@style/ToolBarStyle"
            app:menu="@menu/navigation"
            android:theme="@style/GalaxyZooThemeToolbarDarkOverflow"
            >

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="lblErrorMessage"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/numObjectif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/numObjectif"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txtBiographie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtBiographie"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="false"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>






            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSaveChanges"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/roundedbox"
                android:padding="12dp"
                android:text="@string/btnSaveChanges"

                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>